[package]
name = "wifi-cli"
version = "0.1.1"
edition = "2021"
authors = ["Lorenzo Frittoli https://github.com/lorenzo-frittoli/wifi-cli"]
description = "Simple CLI tool for connecting to wifi networks"
license = "MIT"
repository = "https://github.com/lorenzo-frittoli/wifi-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "3.0.0"
